refactor: new URL(String) 대신 new URI(String).toURL() 사용